k8s/ttyd/ttyd-deployment.yml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ttyd-deployment
spec:
  selector:
    matchLabels:
      app: ttyd-app
  template:
    metadata:
      labels:
        app: ttyd-app
    spec:
      containers:
      - name: ttyd-app
        image: tsl0922/ttyd:alpine
        command: ["ttyd","-W","bash"]
        ports:
        - containerPort: 7681
          name: ttyd-app
      restartPolicy: Always
---
